# binutils-gdb

./: ChangeLog.lto-mixed  configure  configure.ac
bfd/: bfd-in2.h  elf.c  elf32-nds32.c  elflink.c
binutils/: objcopy.c  readelf.c
gdb/: Makefile.in  aarch64-tdep.c  breakpoint.c  configure.host  configure.tgt  i386-tdep.c  nds32-elf.gdbinit  nds32-elf.h  nds32-linux-nat.c  nds32-linux-tdep.c  nds32-linux-tdep.h  nds32-remote.c  nds32-remote.h  nds32-tdep.c  nds32-tdep.h  nds32-utils.c  nds32-utils.h  ppc-linux-tdep.c  ppc-tdep.h  ppc64-tdep.c  remote.c  rs6000-tdep.c
gdb/features/: Makefile  nds32-audio.xml  nds32-core-linux.xml  nds32-core.xml  nds32-fpu.xml  nds32-fpu3.xml  nds32-freg0-linux.c  nds32-freg0-linux.xml  nds32-freg0.xml  nds32-freg1-linux.c  nds32-freg1-linux.xml  nds32-freg1.xml  nds32-freg2-linux.c  nds32-freg2-linux.xml  nds32-freg2.xml  nds32-freg3-linux.c  nds32-freg3-linux.xml  nds32-freg3.xml  nds32-linux-sid.c  nds32-linux-sid.xml  nds32-linux.c  nds32-linux.xml  nds32-sim.c  nds32-sim.xml  nds32-system.xml  nds32-user.xml  nds32.c  nds32.xml
gdb/gdbserver/: Makefile.in  configure.srv  (+10 more)
include/: bfdlink.h
ld/: ldmain.c
sim/: configure  configure.tgt
sim/nds32/: Makefile.in  TODO  aclocal.m4  config.in  configure  configure.ac  interp.c  mingw32-hdep.c  mingw32-hdep.h  nds32-cop0.c  nds32-gmon.c  nds32-gmon.h  nds32-libc.h  nds32-libgloss.h  nds32-linux.h  nds32-load.c  nds32-mm.c  nds32-mm.h  nds32-pfm.c  nds32-pfm.h  nds32-sim.h  nds32-syscall-map.h  nds32-syscall.c  nds32-syscall.h  rbtree.c  rbtree.h  sim-main.h  tconfig.in
(+66 files in other folders)
